# baremetal

./: .gitignore  README.md
baremetal-a15/: Makefile  bm.lds  build.sh  rungdb.sh  runqemu.sh
baremetal-a15/src/: main.c
baremetal-a57/: .gitignore  Makefile  README.md  bm.lds  build.sh  rungdb.sh  runqemu.sh
baremetal-a57/src/: main.c
baremetal-m3/: Makefile  bm.lds  rungdb.sh  runqemu.sh
baremetal-m3/src/: main.c
baremetal-m33/: README.md  build.sh  rungdb.sh  runqemu.sh
baremetal-m33/non-secure/: bm.lds  build.sh
baremetal-m33/secure/: Makefile  bm.lds  build.sh
baremetal-riscv/: Makefile  build.sh  rungdb.sh  runqemu.sh
baremetal-riscv32/: Makefile  README.md  bm.lds  build.sh  rungdb.sh  runqemu.sh
baremetal-riscv32/src/: main.c
baremetal-riscv64/: Makefile  bm.lds  build.sh  runmonitor.sh
docs/: conf.py  index.rst
docs/baremetal-a15/: begin.rst  index.rst
docs/baremetal-m3/: begin.rst  index.rst  m3_add_log.rst  m3_add_main_function.rst  m3_add_makefile_and_lds.rst  (+4 more)
qemu-bm-thomas-a15/: Makefile  README.md  bm.lds  runqemu.sh
qemu-bm-thomas-a53/: .gitignore  CMakeLists.txt  Makefile.bak  bm.lds
qemu-bm-thomas-a53/src/: main.c
qemu-bm-thomas-a53/src/board/: addr_map.h
qemu-bm-thomas-a53/src/common/: common.h  tiny_command.c  tiny_console.c
qemu-bm-thomas-a53/src/core/: startup.S
qemu-bm-thomas-a55/: CMakeLists.txt  bm.lds  config.cmake
qemu-bm-thomas-m3/: Makefile  README.md  bm.lds  runqemu.sh
qemu-bm-thomas-m33/: README.md  rungdb.sh  runqemu.sh
qemu-bm-thomas-riscv32/: Makefile  bm.lds  build.sh
qemu-bm-thomas-riscv64/: Makefile  bm.lds  runqemu.sh
(+166 files in other folders)
